--- a/productos.html
+++ b/productos.html
@@ -7,6 +7,7 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">    
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -82,45 +83,41 @@
 
   </div>
 
-  <div>
-    <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-top: 300px;">
-      <div class="col">
-        <div class="card h-100 w-50">
-          <img src="..." class="card-img-top" alt="...">
+  <div class="container">
+        <div class="card">
+          <img src="https://static.vecteezy.com/system/resources/thumbnails/018/743/180/small/laptop-computer-with-blank-transparent-screen-and-background-format-png.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-body-secondary">Last updated 3 mins ago</small>
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+            </a>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100 w-50">
-          <img src="..." class="card-img-top" alt="...">
+
+        <div class="card">
+          <img src="https://static.vecteezy.com/system/resources/thumbnails/018/743/180/small/laptop-computer-with-blank-transparent-screen-and-background-format-png.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-body-secondary">Last updated 3 mins ago</small>
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+            </a>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100 w-50">
-          <img src="..." class="card-img-top" alt="...">
+
+        <div class="card">
+          <img src="https://static.vecteezy.com/system/resources/thumbnails/018/743/180/small/laptop-computer-with-blank-transparent-screen-and-background-format-png.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-body-secondary">Last updated 3 mins ago</small>
+            <div class="boton">
+              <a href="carrito.html">
+              <button type="button" class="btn btn-dark" >AÑADIR AL CARRITO</button>
+              </a>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
 
   </div>
          
