--- a/productos.html
+++ b/productos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">    
-    <title>Document</title>
+    <title>Productos</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -84,8 +84,10 @@
   </div>
 
   <div class="container">
-        <div class="card">
-          <img src="https://static.vecteezy.com/system/resources/thumbnails/018/743/180/small/laptop-computer-with-blank-transparent-screen-and-background-format-png.png" class="card-img-top" alt="...">
+    <div class="row">
+      <div class="col-4">
+        <div class="card_prod">
+          <img src=" https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg"class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -94,9 +96,11 @@
             </a>
           </div>
         </div>
+      </div>
 
-        <div class="card">
-          <img src="https://static.vecteezy.com/system/resources/thumbnails/018/743/180/small/laptop-computer-with-blank-transparent-screen-and-background-format-png.png" class="card-img-top" alt="...">
+      <div class="col-4">
+        <div class="card_prod">
+          <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -105,9 +109,12 @@
             </a>
           </div>
         </div>
+      </div>
 
-        <div class="card">
-          <img src="https://static.vecteezy.com/system/resources/thumbnails/018/743/180/small/laptop-computer-with-blank-transparent-screen-and-background-format-png.png" class="card-img-top" alt="...">
+
+      <div class="col-4">
+        <div class="card_prod">
+          <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -118,7 +125,19 @@
             </div>
           </div>
         </div>
+      </div>
 
+      <div class="col-4">
+        <div class="card_prod">
+          <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <a href="carrito.html" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
          
 </body>
