se agrego precio a los productos

--- a/index.html
+++ b/index.html
@@ -111,14 +111,18 @@
         <div class="col">
           <div id="cards_mas_pequennias">
             <div class="card h-100">
-              <a href="vista_producto.html">
-                <img src="shopping.webp" class="card-img-top" alt="producto">
-              </a>
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
                 <a href="carrito.html">
                   <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
                 </a>
@@ -129,14 +133,18 @@
         <div class="col">
           <div id="cards_mas_pequennias">
             <div class="card h-100">
-              <a href="vista_producto.html">
-                <img src="shopping.webp" class="card-img-top" alt="producto">
-              </a>
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
                 <a href="carrito.html">
                   <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
                 </a>
@@ -147,14 +155,18 @@
         <div class="col">
           <div id="cards_mas_pequennias">
             <div class="card h-100">
-              <a href="vista_producto.html">
-                <img src="shopping.webp" class="card-img-top" alt="producto">
-              </a>
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
                 <a href="carrito.html">
                   <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
                 </a>
@@ -165,14 +177,18 @@
         <div class="col">
           <div id="cards_mas_pequennias">
             <div class="card h-100">
-              <a href="vista_producto.html">
-                <img src="shopping.webp" class="card-img-top" alt="producto">
-              </a>
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
                 <a href="carrito.html">
                   <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
                 </a>
@@ -183,14 +199,18 @@
         <div class="col">
           <div id="cards_mas_pequennias">
             <div class="card h-100">
-              <a href="vista_producto.html">
-                <img src="shopping.webp" class="card-img-top" alt="producto">
-              </a>
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
                 <a href="carrito.html">
                   <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
                 </a>
@@ -201,14 +221,18 @@
         <div class="col">
           <div id="cards_mas_pequennias">
             <div class="card h-100">
-              <a href="vista_producto.html">
-                <img src="shopping.webp" class="card-img-top" alt="producto">
-              </a>
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
                 <a href="carrito.html">
                   <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
                 </a>
