Actualizacion cards pagina prod y algunos estilos css

--- a/productos.html
+++ b/productos.html
@@ -15,7 +15,7 @@
     <div class="Navbar">
       <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">PCFACTORY 2.0</a>
+        <a class="navbar-brand" href="#"><img src="" alt="">PCFACTORY 2.0</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -54,16 +54,8 @@
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                   </ul>
               </li>
-              <li class="nav-item dropdown">
-                  <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      PC's
-                  </a>
-                  <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
               </li>
           </ul>
           <form class="d-flex" role="search" style="margin-right: 40%;">
@@ -83,14 +75,23 @@
 
   </div>
 
+  <div class="Titulo_prod"><h1 style="text-align: center;" >PRODUCTOS</h1></div>
+
   <div class="container">
     <div class="row">
-      <div class="col-4">
+      <div class="col-3">
         <div class="card_prod">
-          <img src=" https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg"class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="vista_producto.html">
+            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
+          </a>          <div class="card-body">
+            <h5 class="card-title">COMPUTADOR HP</h5>
+            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
+          </div>
+          <br>
+          <hr>
+          <p class="parrafo"><b>PRECIO: $579.990</b></p>
+          <hr>
+          <div class="card-footer" style="text-align: center;">
             <a href="carrito.html">
               <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
             </a>
@@ -98,12 +99,19 @@
         </div>
       </div>
 
-      <div class="col-4">
+      <div class="col-3">
         <div class="card_prod">
-          <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <a href="vista_producto.html">
+            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
+          </a>          <div class="card-body">
+            <h5 class="card-title">COMPUTADOR HP</h5>
+            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
+          </div>
+          <br>
+          <hr>
+          <p class="parrafo"><b>PRECIO: $579.990</b></p>
+          <hr>
+          <div class="card-footer" style="text-align: center;">
             <a href="carrito.html">
               <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
             </a>
@@ -112,28 +120,123 @@
       </div>
 
 
-      <div class="col-4">
+      <div class="col-3">
         <div class="card_prod">
-          <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <div class="boton">
-              <a href="carrito.html">
-              <button type="button" class="btn btn-dark" >AÑADIR AL CARRITO</button>
-              </a>
-            </div>
+          <a href="vista_producto.html">
+            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
+          </a>          <div class="card-body">
+            <h5 class="card-title">COMPUTADOR HP</h5>
+            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
+          </div>
+          <br>
+          <hr>
+          <p class="parrafo"><b>PRECIO: $579.990</b></p>
+          <hr>
+          <div class="card-footer" style="text-align: center;">
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+            </a>
           </div>
         </div>
       </div>
 
-      <div class="col-4">
+
+      <div class="col-3">
         <div class="card_prod">
-          <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <a href="carrito.html" class="btn btn-primary">Go somewhere</a>
+          <a href="vista_producto.html">
+            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
+          </a>          <div class="card-body">
+            <h5 class="card-title">COMPUTADOR HP</h5>
+            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
+          </div>
+          <br>
+          <hr>
+          <p class="parrafo"><b>PRECIO: $579.990</b></p>
+          <hr>
+          <div class="card-footer" style="text-align: center;">
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-3">
+        <div class="card_prod">
+          <a href="vista_producto.html">
+            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
+          </a>          <div class="card-body">
+            <h5 class="card-title">COMPUTADOR HP</h5>
+            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
+          </div>
+          <br>
+          <hr>
+          <p class="parrafo"><b>PRECIO: $579.990</b></p>
+          <hr>
+          <div class="card-footer" style="text-align: center;">
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-3">
+        <div class="card_prod">
+          <a href="vista_producto.html">
+            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
+          </a>          <div class="card-body">
+            <h5 class="card-title">COMPUTADOR HP</h5>
+            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
+          </div>
+          <br>
+          <hr>
+          <p class="parrafo"><b>PRECIO: $579.990</b></p>
+          <hr>
+          <div class="card-footer" style="text-align: center;">
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-3">
+        <div class="card_prod">
+          <a href="vista_producto.html">
+            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
+          </a>          <div class="card-body">
+            <h5 class="card-title">COMPUTADOR HP</h5>
+            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
+          </div>
+          <br>
+          <hr>
+          <p class="parrafo"><b>PRECIO: $579.990</b></p>
+          <hr>
+          <div class="card-footer" style="text-align: center;">
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-3">
+        <div class="card_prod">
+          <a href="vista_producto.html">
+            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
+          </a>          <div class="card-body">
+            <h5 class="card-title">COMPUTADOR HP</h5>
+            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
+          </div>
+          <br>
+          <hr>
+          <p class="parrafo"><b>PRECIO: $579.990</b></p>
+          <hr>
+          <div class="card-footer" style="text-align: center;">
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+            </a>
           </div>
         </div>
       </div>
