--- a/index.html
+++ b/index.html
@@ -83,18 +83,10 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="pc_asus_carrousel.png" class="d-block w-100" alt="pc" height=" 520px">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
+            <img src="img_carrousel.jpg" class="d-block w-100" alt="pc" height="570px">
           </div>
           <div class="carousel-item">
-            <img src="black_friday_carrousel.webp" class="d-block w-100" alt="..." height=" 520px">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
+            <img src="img_carrousel-2.jpg" class="d-block w-100" alt="..." height="570px">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -124,7 +116,7 @@
                 <p style="font-weight: bold;">PRECIO: $212.990</p>
                 <hr>
                 <a href="carrito.html">
-                  <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
                 </a>
               </div>
             </div>
@@ -146,7 +138,7 @@
                 <p style="font-weight: bold;">PRECIO: $212.990</p>
                 <hr>
                 <a href="carrito.html">
-                  <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
                 </a>
               </div>
             </div>
@@ -168,7 +160,7 @@
                 <p style="font-weight: bold;">PRECIO: $212.990</p>
                 <hr>
                 <a href="carrito.html">
-                  <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
                 </a>
               </div>
             </div>
@@ -190,7 +182,7 @@
                 <p style="font-weight: bold;">PRECIO: $212.990</p>
                 <hr>
                 <a href="carrito.html">
-                  <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
                 </a>
               </div>
             </div>
@@ -212,7 +204,7 @@
                 <p style="font-weight: bold;">PRECIO: $212.990</p>
                 <hr>
                 <a href="carrito.html">
-                  <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
                 </a>
               </div>
             </div>
@@ -234,7 +226,7 @@
                 <p style="font-weight: bold;">PRECIO: $212.990</p>
                 <hr>
                 <a href="carrito.html">
-                  <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
                 </a>
               </div>
             </div>
