se agrego la imagen del logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="Navbar">
       <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="" alt="">PCFACTORY 2.0</a>
+        <a class="navbar-brand" href="index.html"><img src="logo.webp" style="width: 60px; height: 50px;"">DUOTECK</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -71,9 +71,7 @@
       </div>
       </nav>
     </div>
-
   </div>
-  
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
