--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
-    <div class="Navbar">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+  <div class="Navbar">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="logo.webp" style="width: 60px; height: 50px;"">DUOTECK</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,166 +68,165 @@
           </a>
         </div>
       </div>
-      </nav>
+    </nav>
+  </div>
+  <div class="container-fluid">
+    <div id="carouselExampleAutoplaying" class="carousel slide pt-3" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img_carrousel.jpg" class="d-block w-100" alt="pc" height="570px">
+        </div>
+        <div class="carousel-item">
+          <img src="img_carrousel-2.jpg" class="d-block w-100" alt="..." height="570px">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 mt-5">
+      <div class="col">
+        <div id="cards_mas_pequennias">
+          <div class="card h-100">
+            <div id="img_cards">
+              <a href="vista_producto.html">
+                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+              </a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer" style="text-align: center;">
+              <p style="font-weight: bold;">PRECIO: $212.990</p>
+              <hr>
+              <a href="carrito.html">
+                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div id="cards_mas_pequennias">
+          <div class="card h-100">
+            <div id="img_cards">
+              <a href="vista_producto.html">
+                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+              </a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer" style="text-align: center;">
+              <p style="font-weight: bold;">PRECIO: $212.990</p>
+              <hr>
+              <a href="carrito.html">
+                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div id="cards_mas_pequennias">
+          <div class="card h-100">
+            <div id="img_cards">
+              <a href="vista_producto.html">
+                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+              </a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer" style="text-align: center;">
+              <p style="font-weight: bold;">PRECIO: $212.990</p>
+              <hr>
+              <a href="carrito.html">
+                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div id="cards_mas_pequennias">
+          <div class="card h-100">
+            <div id="img_cards">
+              <a href="vista_producto.html">
+                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+              </a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer" style="text-align: center;">
+              <p style="font-weight: bold;">PRECIO: $212.990</p>
+              <hr>
+              <a href="carrito.html">
+                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div id="cards_mas_pequennias">
+          <div class="card h-100">
+            <div id="img_cards">
+              <a href="vista_producto.html">
+                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+              </a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer" style="text-align: center;">
+              <p style="font-weight: bold;">PRECIO: $212.990</p>
+              <hr>
+              <a href="carrito.html">
+                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div id="cards_mas_pequennias">
+          <div class="card h-100">
+            <div id="img_cards">
+              <a href="vista_producto.html">
+                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+              </a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer" style="text-align: center;">
+              <p style="font-weight: bold;">PRECIO: $212.990</p>
+              <hr>
+              <a href="carrito.html">
+                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>  
     </div>
   </div>
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img_carrousel.jpg" class="d-block w-100" alt="pc" height="570px">
-          </div>
-          <div class="carousel-item">
-            <img src="img_carrousel-2.jpg" class="d-block w-100" alt="..." height="570px">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <div id="cards_centradas">
-      <div class="row row-cols-1 row-cols-md-3 g-4" style="margin-top: 30px;">
-        <div class="col">
-          <div id="cards_mas_pequennias">
-            <div class="card h-100">
-              <div id="img_cards">
-                <a href="vista_producto.html">
-                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
-                </a>
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card-footer" style="text-align: center;">
-                <p style="font-weight: bold;">PRECIO: $212.990</p>
-                <hr>
-                <a href="carrito.html">
-                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div id="cards_mas_pequennias">
-            <div class="card h-100">
-              <div id="img_cards">
-                <a href="vista_producto.html">
-                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
-                </a>
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card-footer" style="text-align: center;">
-                <p style="font-weight: bold;">PRECIO: $212.990</p>
-                <hr>
-                <a href="carrito.html">
-                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div id="cards_mas_pequennias">
-            <div class="card h-100">
-              <div id="img_cards">
-                <a href="vista_producto.html">
-                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
-                </a>
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card-footer" style="text-align: center;">
-                <p style="font-weight: bold;">PRECIO: $212.990</p>
-                <hr>
-                <a href="carrito.html">
-                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div id="cards_mas_pequennias">
-            <div class="card h-100">
-              <div id="img_cards">
-                <a href="vista_producto.html">
-                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
-                </a>
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card-footer" style="text-align: center;">
-                <p style="font-weight: bold;">PRECIO: $212.990</p>
-                <hr>
-                <a href="carrito.html">
-                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div id="cards_mas_pequennias">
-            <div class="card h-100">
-              <div id="img_cards">
-                <a href="vista_producto.html">
-                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
-                </a>
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card-footer" style="text-align: center;">
-                <p style="font-weight: bold;">PRECIO: $212.990</p>
-                <hr>
-                <a href="carrito.html">
-                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div id="cards_mas_pequennias">
-            <div class="card h-100">
-              <div id="img_cards">
-                <a href="vista_producto.html">
-                  <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
-                </a>
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-              <div class="card-footer" style="text-align: center;">
-                <p style="font-weight: bold;">PRECIO: $212.990</p>
-                <hr>
-                <a href="carrito.html">
-                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>  
-      </div>
-    </div>
 </body>
 </html>
