Se corrigieron la case del body y de cuadro-vista-producto

--- a/vista_producto.html
+++ b/vista_producto.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body-vista-productos">
+<body class="overflow-hidden">
     <div>
         <div class="Navbar">
             <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -96,15 +96,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cuadrado-vista-producto">
+                            <div class="cuadrado-vista-producto overflow-auto">
                                 <div class="text-container-vista-producto">
                                     <!-- Texto -->
                                     <h1>Producto</h1>
                                     <h5>Descripcion</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quisquam excepturi ex voluptates cumque, tempore error asperiores laudantium, laborum at ea impedit facere minima eligendi ad similique vitae beatae enim quam. Ullam possimus hic quidem. Culpa, quia obcaecati! Deleniti, aspernatur eveniet illum laudantium iste eos, nemo tenetur ducimus numquam id nostrum commodi debitis! Nam, perspiciatis nobis maxime tempora dolorum tenetur minus, ducimus distinctio in ipsa illo vitae voluptas ipsum molestiae?</p>
-                                    <!-- Botones -->
-
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quisquam excepturi ex voluptates cumque, tempore error asperiores laudantium, laborum at ea impedit facere minima eligendi ad similique vitae beatae enim quam. Ullam possimus hic quidem. Culpa, quia obcaecati! Deleniti, aspernatur eveniet illum laudantium iste eos, nemo tenetur ducimus numquam id nostrum commodi debitis! Nam, perspiciatis nobis maxime tempora dolorum tenetur minus, ducimus distinctio in ipsa illo vitae voluptas ipsum molestiae?
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quisquam excepturi ex voluptates cumque, tempore error asperiores laudantium, laborum at ea impedit facere minima eligendi ad similique vitae beatae enim quam. Ullam possimus hic quidem. Culpa, quia obcaecati! Deleniti, aspernatur eveniet illum laudantium iste eos, nemo tenetur ducimus numquam id nostrum commodi debitis! Nam, perspiciatis nobis maxime tempora dolorum tenetur minus, ducimus distinctio in ipsa illo vitae voluptas ipsum molestiae?
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quisquam excepturi ex voluptates cumque, tempore error asperiores laudantium, laborum at ea impedit facere minima eligendi ad similique vitae beatae enim quam. Ullam possimus hic quidem. Culpa, quia obcaecati! Deleniti, aspernatur eveniet illum laudantium iste eos, nemo tenetur ducimus numquam id nostrum commodi debitis! Nam, perspiciatis nobis maxime tempora dolorum tenetur minus, ducimus distinctio in ipsa illo vitae voluptas ipsum molestiae?
+                                    </p>
                                 </div>
+                                <!-- Botones -->
                             </div>
                         </div>
                     </div>
