se cambio la ruta de las fotos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="Navbar">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="logo.webp" style="width: 60px; height: 50px;"">DUOTECK</a>
+        <a class="navbar-brand" href="index.html"><img src="fotos/logo.webp" style="width: 60px; height: 50px;"">DUOTECK</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -61,10 +61,10 @@
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
           <a href="perfil_usuario.html" style="margin-left: 20px;">
-              <img src="usuario.png" alt="usuario">
+              <img src="fotos/usuario.png" alt="usuario">
           </a>
           <a href="carrito.html" style="margin-left: 20px;">
-              <img src="carrito.png" alt="carrito" >
+              <img src="fotos/carrito.png" alt="carrito" >
           </a>
         </div>
       </div>
@@ -78,10 +78,10 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img_carrousel.jpg" class="d-block w-100" alt="pc" height="570px">
+          <img src="fotos/img_carrousel.jpg" class="d-block w-100" alt="pc" height="570px">
         </div>
         <div class="carousel-item">
-          <img src="img_carrousel-2.jpg" class="d-block w-100" alt="..." height="570px">
+          <img src="fotos/img_carrousel-2.jpg" class="d-block w-100" alt="..." height="570px">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -99,7 +99,7 @@
           <div class="card h-100">
             <div id="img_cards">
               <a href="vista_producto.html">
-                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
               </a>
             </div>
             <div class="card-body">
@@ -121,7 +121,7 @@
           <div class="card h-100">
             <div id="img_cards">
               <a href="vista_producto.html">
-                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
               </a>
             </div>
             <div class="card-body">
@@ -143,7 +143,7 @@
           <div class="card h-100">
             <div id="img_cards">
               <a href="vista_producto.html">
-                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
               </a>
             </div>
             <div class="card-body">
@@ -165,7 +165,7 @@
           <div class="card h-100">
             <div id="img_cards">
               <a href="vista_producto.html">
-                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
               </a>
             </div>
             <div class="card-body">
@@ -187,7 +187,7 @@
           <div class="card h-100">
             <div id="img_cards">
               <a href="vista_producto.html">
-                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
               </a>
             </div>
             <div class="card-body">
@@ -209,7 +209,7 @@
           <div class="card h-100">
             <div id="img_cards">
               <a href="vista_producto.html">
-                <img src="img_default_productos.jpg" class="card-img-top" alt="producto">
+                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
               </a>
             </div>
             <div class="card-body">
