se cambio la ruta de las fotos

--- a/vista_producto.html
+++ b/vista_producto.html
@@ -14,7 +14,7 @@
         <div class="Navbar">
             <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html"><img src="logo.webp" style="width: 60px; height: 50px;"">DUOTECK</a>
+                    <a class="navbar-brand" href="index.html"><img src="fotos/logo.webp" style="width: 60px; height: 50px;"">DUOTECK</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -54,7 +54,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                                <a class="nav-link active" aria-current="page" href="fotos/productos.html">Productos</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search" style="margin-right: 40%;">
@@ -62,10 +62,10 @@
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
                         <a href="perfil_usuario.html" style="margin-left: 20px;">
-                            <img src="usuario.png" alt="usuario">
+                            <img src="fotos/usuario.png" alt="usuario">
                         </a>
                         <a href="carrito.html" style="margin-left: 20px;">
-                            <img src="carrito.png" alt="carrito" >
+                            <img src="fotos/carrito.png" alt="carrito" >
                         </a>
                     </div>
                 </div>
@@ -80,19 +80,19 @@
                             <div class="carousel-container-producto">
                                 <div class="carousel-wrapper-producto">
                                     <div class="carousel-slide-producto">
-                                        <img src="img_carrousel-2.jpg" alt="Slide 1">
+                                        <img src="fotos/img_carrousel-2.jpg" alt="Slide 1">
                                     </div>
                                     <div class="carousel-slide-producto">
-                                        <img src="img_default_productos.jpg" alt="Slide 2">
+                                        <img src="fotos/img_default_productos.jpg" alt="Slide 2">
                                     </div>
                                     <div class="carousel-slide-producto">
-                                        <img src="img_carrousel.jpg" alt="Slide 3">
+                                        <img src="fotos/img_carrousel.jpg" alt="Slide 3">
                                     </div>
                                     <div class="carousel-slide-producto">
-                                        <img src="img_default_productos.jpg" alt="Slide 3">
+                                        <img src="fotos/img_default_productos.jpg" alt="Slide 3">
                                     </div>
                                     <div class="carousel-slide-producto">
-                                        <img src="img_carrousel-2.jpg" alt="Slide 3">
+                                        <img src="fotos/img_carrousel-2.jpg" alt="Slide 3">
                                     </div>
                                 </div>
                             </div>
